# video-pipeline

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: check-claude-md-on-push.sh
.claude/skills/imitate-trend/: SKILL.md
api/: admin.py  apps.py  auth.py  models.py  serializers.py  urls.py  views.py
api/management/commands/: create_api_key.py
api/migrations/: 0001_initial.py
compose/: captions.py  ffmpeg.py
config/: celery.py  settings.py  urls.py
core/: audio.py  beat.py  context.py  fetch.py  storage.py
delivery/: telegram.py
docs/: BUILD_CONTRACT.md
docs/superpowers/plans/: 2026-06-04-two-mode-pipeline.md  2026-06-06-mimic-mode.md  2026-06-07-lora-identity-engine.md
docs/superpowers/specs/: 2026-06-02-brainrot-pipeline-design.md  2026-06-04-two-mode-pipeline-design.md  2026-06-06-mimic-mode-design.md  2026-06-07-lora-identity-engine-design.md
jobs/: admin.py  models.py  orchestrator.py  presets.py
jobs/management/commands/: describe_trend.py  render_transition.py  run_job.py
jobs/migrations/: 0001_initial.py  0002_job_song_source.py  0003_job_song_clip.py  0004_job_character_image.py  0005_job_backup_character_image_job_backup_character_ref.py  0006_job_mode.py  0007_job_hook.py  0008_job_style.py  0009_job_motion_captions.py  0010_job_framing.py  0011_job_drive_source.py  0012_job_character_lora_job_character_trigger.py  0013_job_lora_scale.py  0014_job_scene_generator.py
presets/: alma_mate_comfort.yaml  brujeria.yaml  chrome_man.yaml  citylights_neon_girl.yaml  cool_girl.yaml  dance_clean_girl.yaml  dance_coquette.yaml  dance_cyber_y2k.yaml  dance_cyber_y2k_live.yaml  dance_demo.yaml  dance_egirl.yaml  dance_kitchen.yaml  dance_neon_girl.yaml  dance_neon_girl_athleisure.yaml  dance_neon_girl_evening.yaml  dance_neon_girl_streetwear.yaml  dance_neon_girl_y2k_denim.yaml  dance_office_siren.yaml  dance_old_money.yaml  dance_street.yaml  demo.yaml  duo_psychedelic.yaml  flower.yaml  forest.yaml  from_source.yaml  glowup_neon_girl.yaml  mimic_neon_girl.yaml  neon_girl_car_pov.yaml  ootd_beige.yaml  ootd_twirl.yaml  pink_blackhole_closeup.yaml  pink_flower_field.yaml  pink_flower_field_2.yaml  pink_girl.yaml  saturn.yaml  soho_walk_neon_girl.yaml  statue_man.yaml  trio.yaml  vibe_nyc.yaml  vibe_skyline.yaml
providers/: base.py  fakes.py  fal.py  gemini.py  lipsync.py  matting.py  motion.py  motion_transfer.py  replicate.py  seedream.py
scripts/: check_exception_discipline.py  check_missing_migrations.sh  coverage_ratchet.py  run_mypy.sh  run_tests_with_coverage.sh
stages/: base.py  tasks.py
tests/: test_api.py  test_audio.py  test_beat.py  test_captions_window.py  test_compose.py  test_context.py  test_delivery.py  test_describe_trend.py  test_fetch.py  test_lora_scale_behind.py  test_matting.py  test_motion.py  test_omnihuman.py  test_pipeline.py  test_providers.py  test_realism_defaults.py  test_realism_grade.py  test_replicate_parsing.py  test_seedream_comfort.py  test_stages_helpers.py  test_transition.py
