[project]
name = "brainrot"
version = "0.1.0"
description = "Config-driven pipeline: a preset song + theme + locked synthetic character become a finished, lip-synced, captioned 9:16 video delivered to Telegram for manual posting."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "django>=5.1,<7.0",
    "django-environ>=0.11",
    "redis>=5.0",
    "celery>=5.4",
    "django-celery-beat>=2.6",
    "django-celery-results>=2.5",
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "django-unfold>=0.94,<0.95",
    "djangorestframework>=3.15",
    # replicate + fal-client power the Real provider backends. Imports are
    # deferred to the Real client callsites so a fake-only run (tests, the
    # default dev loop) never needs the packages installed to import — but
    # they ship in the image so flipping PROVIDER_MODE=real Just Works.
    "replicate>=1.0",
    "fal-client>=0.5",
    # Fetches the guide-track audio from a URL or a "name/artist" search
    # (ytsearch) when a preset gives song.source instead of a local file.
    # Uses ffmpeg (already in the image) to extract to mp3.
    "yt-dlp>=2025.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    # Pin ruff exactly so the host venv, the docker image, and pre-commit
    # all format identically. Without the pin the three end up on different
    # minor versions and every commit thrashes the same files (the
    # "pre-commit Restored changes" loop). Bump in lockstep with the rev in
    # .pre-commit-config.yaml.
    "ruff==0.15.14",
    "mypy>=1.11",
    "django-stubs[compatible-mypy]>=5.0",
    "types-PyYAML>=6.0",
    "types-redis>=4.6",
    # watchmedo wraps celery in an auto-restart loop watching *.py changes,
    # so the bind-mounted worker reloads on edit without a compose restart.
    "watchdog>=4.0",
]

[tool.coverage.run]
source = ["core", "jobs", "stages", "providers", "compose", "delivery", "api"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
namespace_packages = true
mypy_path = "."
exclude = '(migrations/|tests/|scripts/)'
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
# Loosen for the v1 surface — re-enable as implementations firm up.
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "config.settings"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "core",
    "jobs",
    "stages",
    "providers",
    "compose",
    "delivery",
    "api",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
# Pre-push hook runs `pytest --cov` against this threshold. Bump it (never
# down) via `make coverage-ratchet` as more code lands.
addopts = "--cov --cov-report=term-missing --cov-fail-under=75"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["**/migrations/**"]

[tool.ruff.lint]
# See AGENTS.md for the exception-discipline rationale.
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except — bans bare `except:` and `except Exception:`
    "S110",   # try-except-pass (silent swallowing)
    "S112",   # try-except-continue (silent swallowing)
    "TRY002", # avoid raising generic Exception
    "TRY201", # use `raise` (re-raise) without renaming the exception
    "TRY301", # don't `raise` inside the try-block
    "TRY400", # use `logging.exception` instead of `logging.error` in except
    "G",      # flake8-logging-format
    "RET504", # unnecessary assignment before return
    "PLC0415", # imports must be module-level (deferred imports need `# noqa`)
    "TID252", # no relative imports — use the absolute package path
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use broad excepts to assert on error paths, and local
# imports inside test functions are a normal, harmless pattern.
"tests/**/*.py" = ["BLE001", "S101", "PLC0415"]

[tool.ruff.lint.flake8-tidy-imports]
# Absolute imports only — `from jobs.models import X`, never `from .models`.
ban-relative-imports = "all"
